--- a/index.html
+++ b/index.html
@@ -2,141 +2,56 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./santosh-2.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
+    <title>Project Overview</title>
   </head>
   <body>
-    <div class="santosh-2-new">
-      <div class="frame-parent5">
-        <div class="artifacts-container">
-          <div class="scenario">Artifacts</div>
+    <header class="header-container">
+      <div class="artifacts-section">
+        <div class="artifacts">Artifacts</div>
+        <nav class="nav-links">
+          <div class="nav-item">Home</div>
+          <div class="nav-item">About</div>
+        </nav>
+      </div>
+    </header>
+
+    <section class="overview-section">
+      <div class="overview-content">
+        <h1>Project Overview</h1>
+        <p>Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit accumsan vulputate egestas amet urna. Sed libero egestas dictum urna iaculis bibendum egestas. Mi mus sed consectetur varius cursus imperdiet.</p>
+      </div>
+    </section>
+
+    <main class="main-content">
+      <h2>BTS Project</h2>
+      <div class="project-cards">
+        <div class="card">
+          <h3>Project 1 Overview</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit accumsan vulputate egestas amet urna.</p>
         </div>
-        <div class="frame-parent6">
-          <div class="artifacts-container">
-            <div class="home1">Home</div>
-          </div>
-          <div class="artifacts-container">
-            <div class="home1">About</div>
-          </div>
-          <div class="projects-group">
-            <div class="home1">Projects</div>
-            <div class="keyboard-arrow-down1">
-              <img
-                class="keyboard-arrow-down-icon1"
-                alt=""
-                src="./public/keyboard-arrow-down.svg"
-              />
-            </div>
-          </div>
+        <div class="card">
+          <h3>Project 2 Overview</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit accumsan vulputate egestas amet urna.</p>
+        </div>
+        <div class="card">
+          <h3>Project 3 Overview</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit accumsan vulputate egestas amet urna.</p>
+        </div>
+        <div class="card">
+          <h3>Project 4 Overview</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit accumsan vulputate egestas amet urna.</p>
+        </div>
+        <div class="card">
+          <h3>Project 5 Overview</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit accumsan vulputate egestas amet urna.</p>
         </div>
       </div>
-      <div class="thanks-for-visit1">Thanks for visit us!</div>
-      <div class="santosh-2-new-child"></div>
-      <div class="santosh-2-new-item"></div>
-      <div class="santosh-2-new-inner"></div>
-      <div class="abc-parent">
-        <b class="abc">ABC</b>
-        <div class="frame-parent7">
-          <div class="scenario-parent">
-            <div class="scenario">Scenario</div>
-            <img
-              class="keyboard-arrow-down-icon2"
-              alt=""
-              src="./public/keyboard-arrow-down-1.svg"
-            />
-          </div>
-          <div class="frame-parent8">
-            <div class="scenario-1-wrapper">
-              <div class="scenario-1">Scenario - 1</div>
-            </div>
-            <div class="abc">Scenario - 2</div>
-            <div class="abc">Scenario - 3</div>
-            <div class="abc">Scenario - 4</div>
-            <div class="abc">Scenario - 5</div>
-            <div class="abc">Scenario - 6</div>
-          </div>
-        </div>
-      </div>
-      <div class="heading-1-parent">
-        <b class="scenario-1">Heading 1</b>
-        <div class="lorem-ipsum-dolor-sit-amet-con-container">
-          <div class="lorem-ipsum-dolor5">
-            Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit
-            accumsan vulputate egestas amet urna. Lorem ipsum dolor sit amet
-            consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-            amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas lobortis
-            in elit accumsan vulputate egestas amet urna. Lorem ipsum dolor sit
-            amet consectetur. Maecenas lobortis in elit accumsan vulputate
-            egestas amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-            lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-            dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-            vulputate egestas amet urna. Lorem ipsum dolor sit amet consectetur.
-            Maecenas lobortis in elit accumsan vulputate egestas amet urna.
-            Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit
-            accumsan vulputate egestas amet urna. Lorem ipsum dolor sit amet
-            consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-            amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas lobortis
-            in elit accumsan vulputate egestas amet urna.
-          </div>
-        </div>
-      </div>
-      <div class="heading-1-group">
-        <b class="heading-11">Heading 1</b>
-        <div class="scenario-1-parent">
-          <b class="abc">Scenario 1</b>
-          <div class="lorem-ipsum-dolor-sit-amet-con-container">
-            <div class="lorem-ipsum-dolor5">
-              Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit
-              accumsan vulputate egestas amet urna. Lorem ipsum dolor sit amet
-              consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-              amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-              lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-              dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-              vulputate egestas amet urna. Lorem ipsum dolor sit amet
-              consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-              amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-              lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-              dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-              vulputate egestas amet urna. Lorem ipsum dolor sit amet
-              consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-              amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-              lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-              dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-              vulputate egestas amet urna.
-            </div>
-          </div>
-        </div>
-        <div class="scenario-1-parent">
-          <b class="abc">Scenario 2</b>
-          <div class="lorem-ipsum-dolor-sit-amet-con-container">
-            <div class="lorem-ipsum-dolor5">
-              Lorem ipsum dolor sit amet consectetur. Maecenas lobortis in elit
-              accumsan vulputate egestas amet urna. Lorem ipsum dolor sit amet
-              consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-              amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-              lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-              dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-              vulputate egestas amet urna. Lorem ipsum dolor sit amet
-              consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-              amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-              lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-              dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-              vulputate egestas amet urna. Lorem ipsum dolor sit amet
-              consectetur. Maecenas lobortis in elit accumsan vulputate egestas
-              amet urna. Lorem ipsum dolor sit amet consectetur. Maecenas
-              lobortis in elit accumsan vulputate egestas amet urna. Lorem ipsum
-              dolor sit amet consectetur. Maecenas lobortis in elit accumsan
-              vulputate egestas amet urna.
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    </main>
+
+    <footer class="footer">
+      <p>Thanks for visiting us!</p>
+    </footer>
   </body>
 </html>
